MilestoneRFA_CM01/src/objects/CM_RFAUserRole__c.object
<CustomObject>
    <description>CM用RFA承認者/ユーザ
RFA承認者/ユーザオブジェクトコピー</description>
    <fields>
        <fullName>Agent1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CM_RFA_Agent1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CM_RFA_Agent2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CM_RFA_Agent3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgentsAssigned__c</fullName>
        <formula>IF( ISBLANK( Agent1__c) &amp;&amp; ISBLANK( Agent2__c) &amp;&amp; ISBLANK( Agent3__c), &quot;No&quot;, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agents Assigned?</label>
        <type>Text</type>
    </fields>
    <label>CM_RFAUserRole</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>CM-Details-{00000000}</displayFormat>
        <label>承認者/ユーザ詳細番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>